# secvarctl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  VERSION  generic.c  guest-usage.md  host-usage.md  secvarctl.1  secvarctl.c  secvarctl.spec
.github/workflows/: CI_formatting.yml  build_rpm.yml  build_test.yml  format_static.yml  push_pr.yml  release.yml  x86_CI.yml
backends/edk2-compat/: edk2-compat-process.c  edk2-compat.c  edk2-svc-generate.c  edk2-svc-insert.c  edk2-svc-read.c  edk2-svc-validate.c  edk2-svc-verify.c  edk2-svc-write.c
backends/edk2-compat/include/: edk2-compat-process.h  edk2-svc.h  opal-api.h
backends/guest/: CMakeLists.txt  Makefile  Makefile.inc  guest_svc_generate.c  guest_svc_read.c  guest_svc_validate.c  guest_svc_verify.c  guest_svc_write.c
backends/guest/common/: generate.c  read.c  util.c  validate.c  verify.c  write.c
backends/guest/include/: guest_svc_backend.h
backends/guest/include/common/: generate.h  read.h  util.h  validate.h  verify.h  write.h
backends/host/: CMakeLists.txt  Makefile  Makefile.inc  host_svc_backend.h  host_svc_generate.c  host_svc_read.c  host_svc_validate.c  host_svc_verify.c  host_svc_write.c
ci/: Dockerfile  Dockerfile.alpine  build-rpm.sh  build-static.sh
crypto/: crypto-mbedtls.c  crypto-openssl.c  crypto.c  crypto.h
extraMbedtls/: generate-pkcs7.c  pkcs7.c
extraMbedtls/include/: generate-pkcs7.h
include/: config.h  err.h  generic.h  prlog.h  secvarctl.h
src/: generic.c  secvarctl.c
test/: .gitignore  Makefile  common.py  generateTestData.py  guest_generate_testdata.py  guest_tests.py  host_generate_testdata.py  host_generate_tests.py  host_tests.py  runSvcGenerateTests.py  runTests.py
test/guest/: guest_generate_testdata.py  guest_tests.py
test/guest/testdata/authfiles/: PK_by_PK.auth  dbx_by_KEK.auth  dbx_by_PK.auth  grubdb_by_PK.auth  reset_db_by_KEK.auth  reset_dbx_by_KEK.auth  reset_grubdb_by_KEK.auth  reset_grubdbx_by_KEK.auth  reset_moduledb_by_KEK.auth  reset_trustedcadb_by_KEK.auth  sbat_by_PK.auth
test/guest/testdata/eslfiles/: PK.esl  moduledb.esl  trustedcadb.esl
test/guest/testdata/pkcs7files/: SHA256_db_by_KEK.pkcs7  SHA256_db_by_PK.pkcs7  SHA256_dbx_by_KEK.pkcs7  SHA256_grubdb_by_KEK.pkcs7  SHA256_grubdbx_by_KEK.pkcs7  SHA256_grubdbx_by_PK.pkcs7  SHA256_moduledb_by_PK.pkcs7  SHA256_trustedcadb_by_PK.pkcs7
test/guest/testdata/x509certs/: KEK.crt  KEK.der  KEK.key  KEK_by_PK.crt  KEK_by_PK.key  PK.crt  PK.der  PK.key  PK_by_PK.der  db.der  db.key  db_by_KEK.crt  db_by_PK.crt  db_by_PK.der  db_by_PK.key  dbx.der  dbx_by_KEK.crt  dbx_by_PK.der  dbx_by_PK.key  grubdb.crt  grubdb_by_KEK.crt  grubdb_by_KEK.key  grubdb_by_PK.crt  grubdb_by_PK.key  grubdbx.crt  grubdbx.der  grubdbx_by_KEK.key  grubdbx_by_PK.crt  grubdbx_by_PK.der  grubdbx_by_PK.key  moduledb_by_PK.der  moduledb_by_PK.key  trustedcadb.crt  trustedcadb_by_KEK.crt  trustedcadb_by_PK.crt  trustedcadb_by_PK.der  trustedcadb_by_PK.key
test/host/: runSvcGenerateTests.py  runTests.py
test/host/testdata/: KEK_by_PK.auth  KEK_by_PK.der  KEK_by_PK.esl  KEK_by_PK.key  PK_by_PK.crt  bad_KEK_by_db.auth  bad_KEK_by_db.crt  bad_PK_by_db.crt  bad_PK_by_db.esl  db_by_KEK.auth  db_by_PK.esl  dbx_by_PK.crt  dbx_by_PK.der
test/host/testdata/brokenFiles/: 10db_by_KEK.crt  1db_by_KEK.auth  3db_by_PK.auth  5KEK_by_PK.esl  7db_by_PK.der  8db_by_KEK.der  SHA512.pkcs7  sha384.key  signedWith_sha384.pkcs7
test/testdata/: PK_by_PK.auth  PK_by_PK.der  bad_KEK_by_db.der  bad_KEK_by_db.key  bad_PK_by_db.der  bad_db_by_db.der  bad_db_by_db.esl  bad_db_by_db.key  db_by_KEK.der  db_by_KEK.key  db_by_PK.crt  db_by_PK.der  db_by_PK.key  dbx_by_KEK.auth  dbx_by_KEK.crt  dbx_by_KEK.der  dbx_by_PK.auth  dbx_by_PK.esl  dbx_by_PK.key  empty_KEK_by_PK.auth  empty_db_by_KEK.auth
test/testdata/brokenFiles/: 10KEK_by_PK.crt  10db_by_PK.crt  11KEK_by_PK.crt  11PK_by_PK.crt  1db_by_PK.auth  2KEK_by_PK.auth  2db_by_PK.auth  3KEK_by_PK.auth  3PK_by_PK.auth  3db_by_KEK.auth  5PK_by_PK.esl  5db_by_KEK.esl  6PK_by_PK.esl  7PK_by_PK.der  8KEK_by_PK.der  8PK_by_PK.der  9PK_by_PK.auth  9db_by_KEK.auth  9db_by_PK.auth  rsa4096.crt  rsa4096.esl  rsa4096.key  sha384.auth  sha384.crt  sha384.der  sha384.esl  sha512.auth  sha512.der  sha512.esl  sha512.key  signedWith_rsa4096.pkcs7  signedWith_sha512.pkcs7
test/testdata/goldenKeys/KEK/: KEK.der  KEK.key
test/testdata/goldenKeys/PK/: PK.crt  PK.key
test/testdata/goldenKeys/TS/: data
test/testdata/goldenKeys/db/: data  db.crt  db.der
test/testdata/goldenKeys/dbx/: dbx.der  dbx.key
test/testdata/goldenKeys/sbat/: data  sbat.csv
test/testdata/guest/authfiles/: KEK_by_PK.auth  db_by_KEK.auth  db_by_PK.auth  grubdb_by_KEK.auth  grubdbx_by_KEK.auth  grubdbx_by_PK.auth  moduledb_by_KEK.auth  moduledb_by_PK.auth  reset_KEK_by_PK.auth  reset_PK_by_PK.auth  reset_db_by_PK.auth  reset_dbx_by_PK.auth  reset_grubdb_by_PK.auth  reset_grubdbx_by_PK.auth  reset_moduledb_by_PK.auth  reset_sbat_by_KEK.auth  reset_sbat_by_PK.auth  reset_trustedcadb_by_PK.auth  sbat_by_KEK.auth  trustedcadb_by_KEK.auth  trustedcadb_by_PK.auth
test/testdata/guest/errorfiles/: PK_invalid_cert_size.esl
test/testdata/guest/eslfiles/: KEK.esl  db.esl  dbx.esl  grubdb.esl  grubdbx.esl  sbat.esl
test/testdata/guest/pkcs7files/: SHA256_KEK_by_PK.pkcs7  SHA256_PK_by_PK.pkcs7  SHA256_dbx_by_PK.pkcs7  SHA256_grubdb_by_PK.pkcs7  SHA256_moduledb_by_KEK.pkcs7  SHA256_trustedcadb_by_KEK.pkcs7
test/testdata/guest/x509certs/: KEK_by_PK.der  PK_by_PK.crt  PK_by_PK.key  db.crt  db_by_KEK.der  db_by_KEK.key  dbx.crt  dbx.key  dbx_by_KEK.der  dbx_by_KEK.key  dbx_by_PK.crt  grubdb.der  grubdb.key  grubdb_by_KEK.der  grubdb_by_PK.der  grubdbx.key  grubdbx_by_KEK.crt  grubdbx_by_KEK.der  moduledb.crt  moduledb.der  moduledb.key  moduledb_by_KEK.crt  trustedcadb.der  (+6 more)
test/testdata/host/: KEK_by_PK.crt  PK_by_PK.esl  PK_by_PK.key  bad_KEK_by_db.esl  bad_PK_by_db.auth  bad_PK_by_db.key  bad_db_by_db.auth  bad_db_by_db.crt  db_by_KEK.crt  db_by_KEK.esl  db_by_PK.auth  dbx_by_KEK.esl  dbx_by_KEK.key  empty_PK_by_PK.auth  empty_db_by_PK.auth
(+63 files in other folders)
